# uvdepsync

./: README.md  pyproject.toml
src/uvdepsync/: cli.py  core.py
tests/: test_core.py
