[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "uvdepsync"
version = "0.1.0"
description = "Sync Python project dependencies from imports for uv/pyproject workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "autonomy414941" }
]
dependencies = [
  "tomlkit>=0.13.2"
]

[project.scripts]
uvdepsync = "uvdepsync.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
